# pixelminer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  class.sh  debug.sh  docs.cfg  docs.txt  doxygen.cfg  generate-locales.sh  install-dependencies.sh  release.sh  updatesrcdeps.sh
include/: stdafx.hxx
include/Animations/: Animation.hxx
include/Engine/: Configuration.hxx  Engine.hxx  EngineData.hxx  GraphicsSettings.hxx  Languages.hxx  ResourcePack.hxx
include/Entities/: Entity.hxx  EntityRenderPriorityQueue.hxx  RenderBehavior.hxx
include/Entities/Abilities/: MovementAbility.hxx
include/Entities/Functionalities/: AnimationFunctionality.hxx  (+4 more)
include/GUI/: Button.hxx  Chat.hxx  GUI.hxx  ImageButton.hxx  Input.hxx  PauseMenu.hxx  ScrollList.hxx  ScrollableContainer.hxx  SliderInput.hxx  TextButton.hxx  ToggleButton.hxx  Utils.hxx
include/Game/: GameContext.hxx
include/Map/: Biome.hxx  Chunk.hxx  EntitySpacialGridPartition.hxx  EntitySpatialGridPartition.hxx  Map.hxx  Metadata.hxx  PerlinNoise.hxx  Region.hxx  TerrainGenerator.hxx  TileBase.hxx
include/Network/: Client.hxx  File.hxx  GameData.hxx  GamePacket.hxx  PacketAddress.hxx  Server.hxx
include/Player/: Hotbar.hxx  PlayerGUI.hxx
include/States/: DirectConnectState.hxx  GameState.hxx  LocalesState.hxx  MainMenuState.hxx  MessageState.hxx  MultiplayerState.hxx  SingleplayerState.hxx  State.hxx  Substate.hxx  WorldMenuState.hxx  WorldSelectionMenuState.hxx
include/Tiles/: Tile.hxx  TileBase.hxx  TileData.hxx  TileDatabase.hxx
include/Tools/: Assert.hxx  Date.hxx  FileExplorer.hxx  JSON.hxx  LinearCongruentialGenerator.hxx  Logger.hxx  PerlinNoise.hxx  TerminalColor.hxx  UUID.hxx  Zip.hxx
src/: CMakeLists.txt  main.cxx
src/Animations/: Animation.cxx
src/Assets/: level.json
src/Engine/: Engine.cxx  GraphicsSettings.cxx  Languages.cxx  ResourcePack.cxx
src/Entities/: Entity.cxx  EntityRenderPriorityQueue.cxx
src/GUI/: Button.cxx  Chat.cxx  ImageButton.cxx  Input.cxx  PauseMenu.cxx  ScrollList.cxx  ScrollableContainer.cxx  SliderInput.cxx  TextButton.cxx  ToggleButton.cxx
src/Map/: Biome.cxx  Chunk.cxx  EntitySpacialGridPartition.cxx  EntitySpatialGridPartition.cxx  Map.cxx  PerlinNoise.cxx  Region.cxx  TerrainGenerator.cxx  TileBase.cxx
src/Network/: Client.cxx  File.cxx  GamePacket.cxx  Server.cxx
src/Player/: Hotbar.cxx  PlayerGUI.cxx
src/States/: DirectConnectState.cxx  GameState.cxx  LocalesState.cxx  MainMenuState.cxx  MessageState.cxx  MultiplayerState.cxx  SingleplayerState.cxx  State.cxx  Substate.cxx  WorldMenuState.cxx  WorldSelectionMenuState.cxx
src/TIles/: Tile.cxx  TileBase.cxx
src/Tiles/: Tile.cxx  TileBase.cxx  TileDatabase.cxx
src/Tools/: Date.cxx  FileExplorer.cxx  JSON.cxx  LinearCongruentialGenerator.cxx  Logger.cxx  PerlinNoise.cxx  TerminalColor.cxx  UUID.cxx  Zip.cxx
(+193 files in other folders)
